--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         tools:targetApi="31">
         <activity
             android:name=".ActivityAddStudent.StudentAddActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="stateVisible"/>
         <activity
             android:name=".ActivityStudent.MainActivity"
             android:exported="true">
