--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Example_Springboot"
         tools:targetApi="31">
         <activity
-            android:name=".ActivityAddStudent.StudentAddActivity"
+            android:name=".ActivityAddStudent.AddStudentActivity"
             android:exported="false"
             android:windowSoftInputMode="stateVisible"/>
         <activity
