--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Example_Springboot"
+        tools:replace="android:icon"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".ActivityAddStudent.AddStudentActivity"
