--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,8 @@ dependencies {
     // sweet alert dialog =>
     implementation "com.github.f0ris.sweetalert:library:1.5.1"
 
-    //retrofit
+    //retrofit and gson for server=>
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 }
