--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,9 @@ dependencies {
     //retrofit and gson for server=>
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
 
+    //rxjava =>
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
 }
